<resources>
    <string name="app_name">Raidis</string>
    <string name="nav_notifi">Pranešimai</string>
    <string name="nav_person">Paskyra</string>
    <string name="nav_start">Kelionės</string>
    <string name="intro_atgal">Atgal</string>
    <string name="nav_prideti">Pridėti</string>
    <string name="intro_pirmyn">Kitas</string>
    <string name="rodykle_is">Rodyklė iš</string>
    <string name="vaziuosiu_is">Važiuosiu iš</string>
    <string name="vaziuosiu_i">Važiuosiu į</string>
    <string name="paieskos_btn">Ieškoti</string>
    <string name="Vilnius">Vilnius</string>
    <string name="Kaunas">Kaunas</string>
    <string name="Klaipeda">Klaipeda</string>
    <string name="rodykle">-</string>
    <string name="kaina_5">5€</string>
    <string name="kaina_10">10€</string>
    <string name="artimiausios_keliones">Kur keliausite šiandien?</string>
    <string name="profilio_vardasPav">Virginija Jonušaitė</string>
    <string name="profilio_gyvenviete">Kaunas, Lietuva</string>
    <string name="profilio_miestas">Miestas</string>
    <string name="profilio_vardas">Vardas ir pavardė</string>
    <string name="profilio_pastas">El. paštas</string>
    <string name="profilio_numeris">Numeris</string>
    <string name="profilio_išsaugoti">Išsaugoti</string>
    <string name="profilio_faebook">Facebook</string>
    <string name="profilio_pastoPav">programele@gmail.com</string>
    <string name="profilio_numerioPav">867822111</string>
    <string name="profilio_facebookPav">facebook.com/virginijajonusaite</string>
    <string name="registracija">Registracija</string>
    <string name="ivedimasElP">Įveskite el. paštą</string>
    <string name="ivedimasSlap">Įveskite slaptažodį</string>
    <string name="ivedimasVardas">Įveskite vardą ir pavardę</string>
    <string name="ivedimasSlaptK">Pakartokite slaptažodį</string>
    <string name="ivedimasMiestas">Įveskite miestą</string>
    <string name="registruotisBtn">Registruotis</string>
    <string name="pridetiKelBtn">Pridėti kelionę</string>
    <string name="vairuotojas">Vairuotojas</string>
    <string name="Keleivis">Keleivis</string>
    <string name="prisijungimas">Prisijungimas</string>
    <string name="jungtis">Jungtis</string>
    <string name="zinutesPvz">Taip, turiu dar vietos.</string>
    <string name="zinutesPvz2">Ne, vietos nebeturiu</string>
    <string name="zinuteKlausimas">Sveiki, ar dar turite vietos?</string>
    <string name="pridetiKelione">Pridėti</string>
    <string name="kelioneData">Data</string>
    <string name="kelioneLaikas">Laikas</string>
    <string name="kelionesMasina">Mašinos pavadinimas</string>
    <string name="kelionesVietuSk">Laisvų vietų skaičius</string>
    <string name="kelioneLeistina">Leistina:</string>
    <string name="intro_jungtis">Jungtis</string>
    <string name="paskyra_atsijungti">Atsijungti</string>
    <string name="nuotraukos_ikelimas">Įkelti nuotrauką</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
