<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/pradzia_nav"
        android:icon="@drawable/baseline_drive_eta_black_24dp"
        android:title="@string/nav_start" />
    <item
        android:id="@+id/pridetiKel_nav"
        android:icon="@drawable/ic_add_name"
        android:title="@string/nav_prideti" />
    <item
        android:id="@+id/pranesimai_nav"
        android:icon="@drawable/baseline_drafts_black_24dp"
        android:title="@string/nav_notifi" />
    <item
        android:id="@+id/paskyra_nav"
        android:enabled="true"
        android:icon="@drawable/baseline_face_black_24dp"
        android:title="@string/nav_person"
        android:visible="true" />
</menu>