<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Prisijungimas.RegistracijosLangas">

    <RelativeLayout
        android:id="@+id/photo_layout_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/imgUserReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true">

            <Button
                android:id="@+id/nuotraukosBtn"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/apskritimas_nuotraukos"
                android:text="@string/nuotraukos_ikelimas"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/circle_image_reg"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_marginTop="15dp"
                app:civ_border_width="3dp"/>
        </RelativeLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/photo_layout_reg">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/input"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/person_ion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    app:srcCompat="@drawable/user" />

                <EditText
                    android:id="@+id/name_laukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:background="@color/lightGray"
                    android:ems="10"
                    android:hint="@string/ivedimasVardas"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/miestas_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/miestas_ion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    android:src="@drawable/ic_miestas" />

                <EditText
                    android:id="@+id/miestas_laukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:background="@color/lightGray"
                    android:ems="10"
                    android:hint="@string/ivedimasMiestas"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/envelope_ion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    app:srcCompat="@drawable/envelope" />

                <EditText
                    android:id="@+id/email_laukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:background="@color/lightGray"
                    android:ems="10"
                    android:hint="@string/ivedimasElP"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/keyRepeat_ion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    app:srcCompat="@drawable/key" />

                <EditText
                    android:id="@+id/password_laukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:background="@color/lightGray"
                    android:ems="10"
                    android:hint="@string/ivedimasSlap"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/passwordRepeat_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/input"
                android:orientation="horizontal"
                android:weightSum="100">

                <ImageView
                    android:id="@+id/key_ion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="25"
                    app:srcCompat="@drawable/key" />

                <EditText
                    android:id="@+id/passwordRepeat_laukas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="75"
                    android:background="@color/lightGray"
                    android:ems="10"
                    android:hint="@string/ivedimasSlaptK"
                    android:inputType="textPassword"
                    android:padding="16dp"
                    android:textSize="16sp" />
            </LinearLayout>

            <Button
                android:id="@+id/prisijungimoBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#C91F316D"
                android:text="@string/registruotisBtn"
                android:textColor="@android:color/background_light"
                android:textSize="16sp" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>