<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pagrindinis.PagrindinisPaieska">

    <RelativeLayout
        android:id="@+id/paieskos_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMainLight">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:orientation="horizontal"
        android:weightSum="100">

        <ImageView
            android:id="@+id/arrow_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:src="@drawable/ic_bakarrow_name" />

        <EditText
            android:id="@+id/vaziuoti_is"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:background="@color/lightGray"
            android:ems="10"
            android:hint="@string/vaziuosiu_is"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="100">

        <ImageView
            android:id="@+id/arrow_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="25"
            android:src="@drawable/ic_toarrow_name" />

        <EditText
            android:id="@+id/vaziuosiu_i"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="75"
            android:background="@color/lightGray"
            android:ems="10"
            android:hint="@string/vaziuosiu_i"
            android:inputType="text"
            android:padding="16dp"
            android:textSize="16sp" />
    </LinearLayout>


    <Button
        android:id="@+id/paieskosBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#C91F316D"
        android:text="@string/paieskos_btn"
        android:textColor="@android:color/background_light"
        android:textSize="16sp" />
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/paieskos_layout">

        <TextView
            android:id="@+id/artimiausios_keliones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/artimiausios_keliones"
            android:textColor="#CDD5A0A0"
            android:textAllCaps="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/artimiausios_keliones"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/paieskos_recycler"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/artimiausios_keliones"
                android:layout_above="@id/bottom_nav"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        app:menu="@menu/nav_items"
        app:itemBackground="@color/colorMain"
        app:itemIconTint="@color/nav_item_spalvos"
        app:itemTextColor="@color/nav_item_spalvos"
        app:labelVisibilityMode="labeled"/>

</RelativeLayout>