<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Paskyra.PaskyrosRedagavimas">

    <RelativeLayout
        android:id="@+id/photo_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorMainLight">

        <RelativeLayout
            android:id="@+id/imgUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/paskyros_ft"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:clickable="true" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/photo_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilio_vardas"
                    android:textColor="@color/colorMainLight"
                    android:textSize="13sp"/>

                <EditText
                    android:id="@+id/paskyros_vardas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilio_miestas"
                    android:textColor="@color/colorMainLight"
                    android:textSize="13sp"/>

                <EditText
                    android:id="@+id/paskyros_miestas"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profilio_pastas"
                    android:textColor="@color/colorMainLight"
                    android:textSize="13sp"/>

                <EditText
                    android:id="@+id/paskyros_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text=""
                    android:textColor="#000000"
                    android:textSize="18sp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/lightGray"/>

            </LinearLayout>

            <Button
                android:id="@+id/issaugotiBtn"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="#C91F316D"
                android:text="@string/profilio_išsaugoti"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/background_light"
                android:textSize="16sp"/>

        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>